--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,9 @@ workflows:
               only:
                 /^v.*/
       - tagging-test-job:
+          requires:
+            - build
+            - self-evaluation
           filters:
             branches:
               ignore: /.*/
