--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,6 +190,11 @@ workflows:
   test-publish:
     jobs:
       - build:
+          filters:
+            # We want this to run against all tags and branches. Branches are inclusive by default, so we don't need to
+            # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
+            tags:
+              only: /.*/
       - unpackaged-sanity:
           requires:
             - build
