--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,23 +40,12 @@ jobs:
 
       # UNIT TESTS
       - run:
-          name: test
-          command: yarn test --reporter mocha-junit-reporter --reporter-option mochaFile=test-results/mocha/test-results.xml
-          when: always
-
-      - run:
-          name: eslint
-          command: yarn lint --format junit --output-file test-results/eslint/eslint.xml
-          when: always
-
-      - codecov/upload:
-          file: test-coverage/coverage-final.json
-
-      - store_test_results:
-          path: test-results
-
-      - store_artifacts: # upload test coverage as artifact.
-          path: test-coverage
+          command: |
+            if [ -n $CIRCLE_TAG} ]
+            then
+            git branch -a --contains tags/$CIRCLE_TAG
+            fi
+            echo "DONE"
 
   self-evaluation:
     <<: *defaults
@@ -184,33 +173,3 @@ workflows:
             # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
             tags:
               only: /.*/
-      - unpackaged-sanity:
-          requires:
-            - build
-      - self-evaluation:
-          requires:
-            - build
-      - publish-latest:
-          # This job should only run after 'build' finishes successfully.
-          requires:
-            - build
-            - self-evaluation
-          filters:
-            # We never want to publish branches, so we need to explicitly ignore all of them.
-            branches:
-              ignore: /.*/
-            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
-            tags:
-              only:
-                /^v.*/
-      - packaged-sanity:
-          requires:
-            - publish-latest
-          filters:
-            # We never want to publish branches, so we need to explicitly ignore all of them.
-            branches:
-              ignore: /.*/
-            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
-            tags:
-              only:
-                /^v.*/
