--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,31 +19,12 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: yarn --ignore-scripts
-      - run: yarn build
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - persist_to_workspace:
-          root: ~/repo
-          paths: .
-
       # UNIT TESTS
       - run:
           command: |
             if [ -n $CIRCLE_TAG} ]
             then
-            git branch -a --contains tags/$CIRCLE_TAG
+            echo "YAY"
             fi
             echo "DONE"
 
