--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
           command: |
             if [ -n "$CIRCLE_TAG" ]
             then
-              export CONTAINED_IN_DEV=$(git branch -a --contains tags/$CIRCLE_TAG)
-              export CONTAINED_IN_REL=$(git branch -a --contains tags/$CIRCLE_TAG)
+              export CONTAINED_IN_DEV=$(git branch -a --contains tags/$CIRCLE_TAG|grep dev)
+              export CONTAINED_IN_REL=$(git branch -a --contains tags/$CIRCLE_TAG|grep release)
               if [ -n "$CONTAINED_IN_DEV" ] && [ -z "$CONTAINED_IN_REL" ]
               then
                 echo "Contained in dev only"
