--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
             fi
       - run:
           command: |
-            if [ -n "beep" ]
+            if [ -z "beep" ]
             then
                exit 1
             fi
@@ -59,6 +59,11 @@ jobs:
       - run:
           command: echo "This is fine"
 
+  some-other-job:
+    <<: *defaults
+    steps:
+      - run:
+          command: echo "We are running this second step, which might not be an okay thing to do."
 
   self-evaluation:
     <<: *defaults
@@ -186,3 +191,6 @@ workflows:
             # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
             tags:
               only: /.*/
+      - some-other-job:
+          requires:
+            - build
