--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
             fi
       - run:
           command: |
-            if [ -z "beep" ]
+            if [ -n "beep" ]
             then
                exit 1
             fi
