--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,51 @@ jobs:
       - store_artifacts: # upload test coverage as artifact.
           path: test-coverage
 
+#  build:
+#    <<: *defaults
+#    steps:
+#      - checkout
+#
+#      # UNIT TESTS
+#      - run:
+#          command: |
+#            if [ -n "$CIRCLE_TAG" ]
+#            then
+#            echo "YAY"
+#            fi
+#            echo "DONE"
+#      - run:
+#          command: |
+#            if [ -n "$CIRCLE_TAG" ]
+#            then
+#              echo "==== Tag: $CIRCLE_TAG ====="
+#              git branch -a --contains tags/$CIRCLE_TAG
+#              echo "==== Tag: josh-dev-tag ====="
+#              git branch -a --contains tags/josh-dev-tag
+#              echo "==== Tag: v2.4.0 ====="
+#              git branch -a --contains tags/v2.4.0
+#              echo "===== $CIRCLE_TAG containment information ===="
+#              export CONTAINED_IN_DEV=$(git branch -a --contains tags/$CIRCLE_TAG|grep dev)
+#              export CONTAINED_IN_REL=$(git branch -a --contains tags/$CIRCLE_TAG|grep release)
+#              if [ -n "$CONTAINED_IN_DEV" ] && [ -z "$CONTAINED_IN_REL" ]
+#              then
+#                echo "Contained in dev only"
+#              else
+#                echo "Not contained in dev only"
+#              fi
+#            else
+#              echo "No tag"
+#            fi
+#      - run:
+#          command: |
+#            if [ -n "beep" ]
+#            then
+#               exit 1
+#            fi
+#
+#      - run:
+#          command: echo "This is fine"
+#
   self-evaluation:
     <<: *defaults
     steps:
@@ -163,16 +208,26 @@ jobs:
           at: ~/repo
 
       - run:
-          command: npm run prepack
-      # Update the path so that node modules installed by the release-management orb are found
-      # See https://discuss.circleci.com/t/how-to-add-a-path-to-path-in-circle-2-0/11554
-      - run: echo 'export PATH=$HOME/.config/yarn/global/node_modules/.bin:$PATH' >> $BASH_ENV
-      - release-management/sign
-      - release-management/publish:
-          access: public
-          tag: latest
-          use_tarfile: true
-      - release-management/create-github-release
+          name: Verify branch of origin
+          command: |
+            if [ -z "$CIRCLE_TAG" ]
+            then
+               # If we're not actually working from a tag, then just exit. We only want to deploy tags.
+               exit 1
+            fi
+            # For these two exports, the git command is logging out every local and remote branch that contains the tag.
+            # That gets piped into a grep command so we can look for specific branches in the results.
+            export CONTAINED_IN_RELEASE=$(git branch -a --contains tags/$CIRCLE_TAG|grep release)
+            export CONTAINED_IN_MASTER=$(git branch -a --contains tags/$CIRCLE_TAG|grep master)
+            # Our typical flow is feature branch -> dev -> release -> master. We want to publish tags based on release.
+            # So we'll abort if the tag isn't present in release, or if it's present in master.
+            if [ -z "$CONTAINED_IN_RELEASE" ] || [ -n "$CONTAINED_IN_MASTER" ]
+            then
+               exit 1
+            fi
+
+      - run:
+          command: echo "If we are here, then everything is fine."
 
 workflows:
   version: 2.1
@@ -213,4 +268,4 @@ workflows:
             # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
             tags:
               only:
-                /^v.*/
+                /^.*/
