--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,33 +58,6 @@ jobs:
       - store_artifacts: # upload test coverage as artifact.
           path: test-coverage
 
-  windows-build:
-    executor:
-      name: win/default # executor type
-      size: "medium"
-    working_directory: C:\repo
-
-    steps:
-      # Commands are run in a Windows virtual machine environment
-      - attach_workspace:
-          at: C:\repo
-      # UNIT TESTS
-      - run:
-          name: test
-          command: yarn test --reporter mocha-junit-reporter --reporter-option mochaFile=test-results\mocha\test-results.xml
-          when: always
-
-      - run:
-          name: eslint
-          command: yarn lint --format junit --output-file test-results\eslint\eslint.xml
-          when: always
-
-      - store_test_results:
-          path: test-results
-
-      - store_artifacts: # Upload test coverage as artifact.
-          path: test-coverage
-
   self-evaluation:
     <<: *defaults
     steps:
@@ -220,54 +193,98 @@ jobs:
           use_tarfile: true
       - release-management/create-github-release
 
+  windows-build:
+    executor:
+      name: win/default # executor type
+      size: "medium"
+    working_directory: C:\repo
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn --ignore-scripts
+      - run: yarn build
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - persist_to_workspace:
+          root: C:\repo
+          paths: .
+
+      # UNIT TESTS
+      - run:
+          name: test
+          command: yarn test --reporter mocha-junit-reporter --reporter-option mochaFile=test-results\mocha\test-results.xml
+          when: always
+
+      - run:
+          name: eslint
+          command: yarn lint --format junit --output-file test-results\eslint\eslint.xml
+          when: always
+
+      - store_test_results:
+          path: test-results
+
+      - store_artifacts: # Upload test coverage as artifact.
+          path: test-coverage
+
 workflows:
   version: 2.1
   test-publish:
     jobs:
-      - build:
-          filters:
-            # We want this to run against all tags and branches. Branches are inclusive by default, so we don't need to
-            # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
-            tags:
-              only: /.*/
+#      - build:
+#          filters:
+#            # We want this to run against all tags and branches. Branches are inclusive by default, so we don't need to
+#            # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
+#            tags:
+#              only: /.*/
       - windows-build:
-          requires:
-            - build
           filters:
             # We want this to run against all tags and branches. Branches are inclusive by default, so we don't need to
             # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
             tags:
               only: /.*/
-      - unpackaged-sanity:
-          requires:
-            - build
-            - windows-build
-      - self-evaluation:
-          requires:
-            - build
-            - windows-build
-      - publish-latest:
-          # This job should only run after 'build' finishes successfully.
-          requires:
-            - build
-            - self-evaluation
-            - windows-build
-          filters:
-            # We never want to publish branches, so we need to explicitly ignore all of them.
-            branches:
-              ignore: /.*/
-            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
-            tags:
-              only:
-                /^v.*/
-      - packaged-sanity:
-          requires:
-            - publish-latest
-          filters:
-            # We never want to publish branches, so we need to explicitly ignore all of them.
-            branches:
-              ignore: /.*/
-            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
-            tags:
-              only:
-                /^v.*/
+#      - unpackaged-sanity:
+#          requires:
+#            - build
+#            - windows-build
+#      - self-evaluation:
+#          requires:
+#            - build
+#            - windows-build
+#      - publish-latest:
+#          # This job should only run after 'build' finishes successfully.
+#          requires:
+#            - build
+#            - self-evaluation
+#            - windows-build
+#          filters:
+#            # We never want to publish branches, so we need to explicitly ignore all of them.
+#            branches:
+#              ignore: /.*/
+#            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
+#            tags:
+#              only:
+#                /^v.*/
+#      - packaged-sanity:
+#          requires:
+#            - publish-latest
+#          filters:
+#            # We never want to publish branches, so we need to explicitly ignore all of them.
+#            branches:
+#              ignore: /.*/
+#            # We want to publish any tags that are formatted vXXXX, since that's our semantic versioning syntax.
+#            tags:
+#              only:
+#                /^v.*/
+#
