--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ defaults: &defaults
   working_directory: ~/repo
   docker:
     - image: circleci/openjdk:11.0.2-jdk-node
-wind-defaults: &win-defaults
+win-defaults: &win-defaults
   working_directory: C:/repo
   docker:
     - image: circleci/openjdk:11.0.2-jdk-node
