--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ defaults: &defaults
   working_directory: ~/repo
   docker:
     - image: circleci/openjdk:11.0.2-jdk-node
-win-defaults: &win-defaults
+windefaults: &windefaults
   working_directory: C:/repo
   docker:
     - image: circleci/openjdk:11.0.2-jdk-node
@@ -201,7 +201,7 @@ jobs:
     executor:
       name: win/default # executor type
       size: "medium"
-    <<: *win-defaults
+    <<: *windefaults
 
     steps:
       - checkout
