--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,9 @@ workflows:
             # specify anything. But tags are exclusive by default, so we need to specify that all tags should be included.
             tags:
               only: /.*/
+      - windows-test:
+          requires:
+            - build
 #      - unpackaged-sanity:
 #          requires:
 #            - build
