--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,6 +212,10 @@ jobs:
       - run: yarn list
       - run: yarn list|grep nyc
       - run: npx nyc -h
+      - run:
+          name: test
+          command: yarn test --reporter mocha-junit-reporter --reporter-option mochaFile=test-results/mocha/test-results.xml
+          when: always
 
 workflows:
   version: 2.1
