--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
 		"prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
 		"postpack": "rm -f oclif.manifest.json",
 		"lint": "eslint ./src --ext .ts",
-		"test": "./gradlew test && nyc mocha \"./test/**/*.test.ts\"",
+		"test": "nyc mocha \"./test/**/*.test.ts\"",
 		"postinstall": "ts-node  -e \"require('./lib/lib/postinstall').execute()\"",
 		"coverage": "nyc report --reporter text",
 		"version": "oclif-dev readme && git add README.md"
