--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,7 +205,7 @@ jobs:
 
       - run: md test-results
 
-      - run: ./gradlew build
+      - run: mocha "./test/**/*.test.ts"
 
       - run:
           name: "List rules"
