--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,7 +206,7 @@ jobs:
 
       - run: md test-results
       - run: yarn list
-      - run: ./gradlew.bat  build
+      - run: ./gradlew build
 
       - run: npx mocha "./test/**/*.test.ts"
 
