--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     working_directory: C:\repo
     steps:
       - checkout
-      - run: ./gradlew.bat build
+      - run: ./gradlew build
 
 workflows:
   version: 2.1
