--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
 		"postpack": "rm -f oclif.manifest.json",
 		"lint": "eslint ./src --ext .ts",
 		"test": "./gradlew test && nyc mocha \"./test/**/*.test.ts\"",
+		"joshglobal": "nyc -h",
+		"joshlocal": "npx nyc -h",
 		"postinstall": "ts-node  -e \"require('./lib/lib/postinstall').execute()\"",
 		"coverage": "nyc report --reporter text",
 		"version": "oclif-dev readme && git add README.md"
