--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
 		"prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
 		"postpack": "rm -f oclif.manifest.json",
 		"lint": "eslint ./src --ext .ts",
-		"test": "./gradlew test && nyc mocha \"./test/**/*.test.ts\"",
+		"test": "./gradlew test && npx nyc mocha \"./test/**/*.test.ts\"",
 		"joshglobal": "nyc -h",
 		"joshlocal": "npx nyc -h",
 		"postinstall": "ts-node  -e \"require('./lib/lib/postinstall').execute()\"",
