--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,17 @@ jobs:
           command: yarn test --reporter mocha-junit-reporter --reporter-option mochaFile=test-results\mocha\test-results.xml
           when: always
 
+      - run:
+          name: eslint
+          command: yarn lint --format junit --output-file test-results\eslint\eslint.xml
+          when: always
+
+      - store_test_results:
+          path: test-results
+
+      - store_artifacts: # upload test coverage as artifact
+          path: test-coverage
+
 
   self-evaluation:
     <<: *defaults
