--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ jobs:
       - attach_workspace:
           at: C:\repo
 
+      - run: md test-results
+
       - run: yarn list
       - run: yarn joshlocal
       - run:
